name:                http2-client
version:             0.3.0.2
synopsis:            A native HTTP2 client library.
description:         Please read the README.md at the homepage.
homepage:            https://github.com/lucasdicioccio/http2-client
license:             BSD3
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
copyright:           2017 Lucas DiCioccio
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP2.Client
                     , Network.HTTP2.Client.FrameConnection
                     , Network.HTTP2.Client.Helpers
                     , Network.HTTP2.Client.RawConnection
  build-depends:       base >= 4.7 && < 5
                     , async
                     , bytestring
                     , connection
                     , containers
                     , http2
                     , network
                     , time
                     , tls
  default-language:    Haskell2010

executable http2-client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , async
                     , bytestring
                     , data-default-class
                     , http2
                     , http2-client
                     , optparse-applicative
                     , time
                     , tls
  default-language:    Haskell2010

test-suite http2-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http2-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lucasdicioccio/http2-client
