name:                http2-client
version:             0.8.0.1
synopsis:            A native HTTP2 client library.
description:         Please read the README.md at the homepage.
homepage:            https://github.com/lucasdicioccio/http2-client
license:             BSD3
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
copyright:           2017 Lucas DiCioccio
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP2.Client
                     , Network.HTTP2.Client.FrameConnection
                     , Network.HTTP2.Client.Helpers
                     , Network.HTTP2.Client.RawConnection
  other-modules:       Network.HTTP2.Client.Channels
                     , Network.HTTP2.Client.Dispatch
  build-depends:       base >= 4.7 && < 5
                     , async >= 2.1 && < 3
                     , bytestring >= 0.10 && < 1
                     , containers >= 0.5 && < 1
                     , deepseq >= 1.4 && < 2
                     , http2 >= 1.6 && < 2
                     , network >= 2.6 && < 3
                     , stm >= 2.4 && < 3
                     , time >= 1.8 && < 2
                     , tls >= 1.4 && < 2
  default-language:    Haskell2010

-- Commented-out to avoid distribution
--
--executable http2-client-example-simple-get
--  hs-source-dirs:      examples
--  main-is:             SimpleGet.lhs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
--  build-depends:       base
--                     , async
--                     , bytestring
--                     , data-default-class
--                     , http2
--                     , http2-client
--                     , optparse-applicative
--                     , time
--                     , tls
--  default-language:    Haskell2010

test-suite http2-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http2-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lucasdicioccio/http2-client
