name:                http2-client
version:             0.10.0.2
synopsis:            A native HTTP2 client library.
description:         Please read the README.md at the homepage.
homepage:            https://github.com/lucasdicioccio/http2-client
license:             BSD3
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
copyright:           2017 Lucas DiCioccio
category:            Web
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP2.Client
                     , Network.HTTP2.Client.Exceptions
                     , Network.HTTP2.Client.FrameConnection
                     , Network.HTTP2.Client.Helpers
                     , Network.HTTP2.Client.RawConnection
  other-modules:       Network.HTTP2.Client.Channels
                     , Network.HTTP2.Client.Dispatch
  build-depends:       base >= 4.7 && < 4.20
                     , async >= 2.1 && < 2.3
                     , bytestring >= 0.11 && < 0.13
                     , containers >= 0.5 && < 0.8
                     , deepseq >= 1.4 && < 1.6
                     , http2 >= 4.1 && < 6
                     , lifted-async >= 0.10 && < 0.11
                     , lifted-base >= 0.2 && < 0.3
                     , mtl >= 2.2 && < 2.4
                     , network >= 2.6 && < 3.2
                     , stm >= 2.4 && < 2.8
                     , time >= 1.8 && < 1.15
                     , tls >= 1.8.0 && < 2.0.3
                     , transformers-base >= 0.4 && < 0.5
  default-language:    Haskell2010

-- Commented-out to avoid distribution
--
--executable http2-client-example-simple-get
--  hs-source-dirs:      examples
--  main-is:             SimpleGet.lhs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
--  build-depends:       base
--                     , async
--                     , bytestring
--                     , data-default-class
--                     , http2
--                     , http2-client
--                     , optparse-applicative
--                     , time
--                     , tls
--  default-language:    Haskell2010

test-suite http2-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http2-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lucasdicioccio/http2-client
